--- a/.gitignore
+++ b/.gitignore
@@ -61,10 +61,6 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
-
 # Scrapy stuff:
 .scrapy
 
@@ -85,7 +81,7 @@ ipython_config.py
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -182,9 +178,9 @@ cython_debug/
 .abstra/
 
 # Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
+#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
+#  and can be added to the global gitignore or merged into this file. However, if you prefer,
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
 
@@ -201,7 +197,20 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 
+# Claude Code
+CLAUDE.md
+
 # Marimo
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Example Project - generated files
+example_project/db.sqlite3
+example_project/media/
+example_project/static_collected/
+example_project/home/migrations/0001_initial.py
+
+# Accidental media/static in project root (should be in example_project/)
+/media/
+/static/
