--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "uv_build"
 
 [project]
 name = "wagtail_lms"
-version = "0.1.0"
-description = "A Learning Management System extension for Wagtail with SCORM and xAPI support"
+version = "0.2.0"
+description = "A Learning Management System extension for Wagtail with SCORM 1.2/2004 support"
 readme = "README.md"
 authors = [
     {name = "Felipe Villegas", email = "felavid@gmail.com"}
