--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ testing = [
     "pytest-django>=4.5.2",
     "pytest-cov>=4.0",
 ]
+docs = [
+    "mkdocs-material",
+]
 
 [project.urls]
 Homepage = "https://github.com/dr-rompecabezas/wagtail-lms"
