--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,9 @@ testing = [
     "pytest-cov>=4.0",
 ]
 docs = [
-    "mkdocs-material",
-    "mkdocs-include-markdown-plugin",
+    "mkdocs==1.6.1",
+    "mkdocs-material==9.7.2",
+    "mkdocs-include-markdown-plugin==7.2.1",
 ]
 
 [project.urls]
