Migration: add missing state update for LessonPage.body StreamField
- Add 0003_alter_lessonpage_body migration to sync model state with schema
- Enforce migration consistency in CI via makemigrations --check --dry-run
- Update CHANGELOG and pyproject.toml for 0.10.1 release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,12 @@ jobs:
           uv pip install "wagtail~=${{ matrix.wagtail-version }}.0"
           uv pip install -e ".[testing]"
 
+      - name: Check for missing wagtail_lms migrations
+        run: |
+          uv run python example_project/manage.py makemigrations wagtail_lms --check --dry-run
+        env:
+          PYTHONPATH: .:example_project
+
       - name: Run tests
         run: |
           uv run pytest --cov=src/wagtail_lms --cov-report=xml --cov-report=term-missing
